test new paragraph

--- a/Sections/08_Introduction.Rmd
+++ b/Sections/08_Introduction.Rmd
@@ -18,7 +18,13 @@ Karin michels book chapter
 
 ## Epigenetics and placenta cell types
 
-In the early blastocyst, the majority of gamete-derived epigenetic marks have been erased [@cantoneEpigeneticProgrammingReprogramming2013]. The trophectoderm will develop into one of the layers of the chorion as well as the villous trophoblast, which retains this low methylated state. Hypomethylation of chorionic villi as a whole reflects that trophoblast is the predominant cell type within this tissue [@grigoriuCellSpecificPatterns2011]. In the mouse, trophoblast hypomethylation is associated with down-regulation ofthe DNA methyltransferases, Dnmt3a, Dnmt3b, and Dnmt1a [@odaRegulationLineageSpecific2013]. However, the role of DNMTs in human trophoblast is less clear [@novakovicDNAMethylationmediatedDownregulation2010]. In contrast, the inner cell mass undergoes de novo global DNAm. These cells are the origin of the fetal tissues, but also contribute to primitive endoderm, from which placental endothelial cells are derived, and to the extraembryonic mesoderm, from which villus stroma is derived. In addition to differences in DNAm, the early trophectoderm shows higher H3K27 methylation as well as lower levels of histone H2A and/or H4 phosphorylation [@nelissenEpigeneticsPlacenta2011]. Further differentiation processes in both trophoblast and other lineages are associated with additional DNAm changes and histone modifications at specific regulatory loci [@hembergerEpigeneticLandscapeRequired2007].
+  In the early blastocyst, the majority of gamete-derived epigenetic marks
+have been erased [@cantoneEpigeneticProgrammingReprogramming2013]. The
+trophectoderm will develop into one of the layers of the chorion as well as
+the villous trophoblast, which retains this low methylated state.
+Hypomethylation of chorionic villi as a whole reflects that trophoblast is
+the predominant cell type within this tissue [@grigoriuCellSpecificPatterns2011]. In the mouse, trophoblast
+hypomethylation is associated with down-regulation ofthe DNA methyltransferases, Dnmt3a, Dnmt3b, and Dnmt1a [@odaRegulationLineageSpecific2013]. However, the role of DNMTs in human trophoblast is less clear [@novakovicDNAMethylationmediatedDownregulation2010]. In contrast, the inner cell mass undergoes de novo global DNAm. These cells are the origin of the fetal tissues, but also contribute to primitive endoderm, from which placental endothelial cells are derived, and to the extraembryonic mesoderm, from which villus stroma is derived. In addition to differences in DNAm, the early trophectoderm shows higher H3K27 methylation as well as lower levels of histone H2A and/or H4 phosphorylation [@nelissenEpigeneticsPlacenta2011]. Further differentiation processes in both trophoblast and other lineages are associated with additional DNAm changes and histone modifications at specific regulatory loci [@hembergerEpigeneticLandscapeRequired2007].
 
 The tree-like structures of chorionic villi that compose the placenta consist of an outer layer of stem-like cytotrophoblasts (CTBs), which fuse together to form syncytiotrophoblast (STB). This syncytium facilitates maternal-fetal exchange and produce hormones to support pregnancy, such as progesterone, leptin, human chorionic gonadotropin, and human placental lactogen. Transcriptional and epigenetic events control CTB differentiation and are triggered by pregnancy-associated levels in oxygen content [@soncinSignalingPathwaysMouse2015; @maltepeHypoxiainducibleFactordependentHistone2005]. Under low oxygen conditions, CTB fusion is impaired, and certain STB-specific CpG sites become hypermethylated [@yuenHypoxiaAltersEpigenetic2013]. For example, syncytin-1, which is critical for STB formation, is down-regulated in response to hypoxia through DNMT3A-dependent hypermethylation [@ruebnerReducedSyncytin1Expression2013]. Histone deacetylase complexes (HDAC) and histone acetyltransferases (HAT) are also involved through their effects on the transcription factor GCMa, which regulates syncytin-1 expression [@chuangHistoneDeacetylaseBinds2006].
 
