added planet bmc epi chr refs

--- a/References/reference_list.bib
+++ b/References/reference_list.bib
@@ -11,6 +11,105 @@
   doi = {10.1016/j.stem.2011.03.008}
 }
 
+@article{adkinsRacialDifferencesGenespecific2011a,
+  title = {Racial Differences in Gene-Specific {{DNA}} Methylation Levels Are Present at Birth},
+  author = {Adkins, R. M. and Krushkal, J. and Tylavsky, F. A. and Thomas, F.},
+  year = {2011},
+  journal = {Birth Defects Res A Clin Mol Teratol.},
+  volume = {91},
+  doi = {10.1002/bdra.20770}
+}
+
+@article{alexanderFastModelbasedEstimation2009a,
+  title = {Fast Model-Based Estimation of Ancestry in Unrelated Individuals},
+  author = {Alexander, D. H. and Novembre, J. and Lange, K.},
+  year = {2009},
+  journal = {Genome Res},
+  volume = {19},
+  doi = {10.1101/gr.094052.109}
+}
+
+@article{altmanIntroductionKernelNearestneighbor1992,
+  title = {An Introduction to Kernel and Nearest-Neighbor Nonparametric Regression},
+  author = {Altman, N. S.},
+  year = {1992},
+  journal = {Am Stat},
+  volume = {46},
+  doi = {10.1080/00031305.1992.10475879}
+}
+
+@article{aryeeMinfiFlexibleComprehensive2014b,
+  title = {Minfi: A Flexible and Comprehensive Bioconductor Package for the Analysis of Infinium {{DNA}} Methylation Microarrays},
+  author = {Aryee, M. J. and Jaffe, A. E. and {Corrada-Bravo}, H. and {Ladd-Acosta}, C. and Feinberg, A. P. and Hansen, K. D.},
+  year = {2014},
+  journal = {Bioinformatics},
+  volume = {30},
+  doi = {10.1093/bioinformatics/btu049}
+}
+
+@article{bandaCharacterizingRaceEthnicity2015a,
+  title = {Characterizing Race/Ethnicity and Genetic Ancestry for 100,000 Subjects in the Genetic Epidemiology Research on Adult Health and Aging ({{GERA}}) Cohort},
+  author = {Banda, Y. and Kvale, M. N. and Hoffmann, T. J. and Hesselson, S. E. and Ranatunga, D. and Tang, H.},
+  year = {2015},
+  journal = {Genetics},
+  volume = {200},
+  doi = {10.1534/genetics.115.178616}
+}
+
+@article{barfieldAccountingPopulationStratification2014,
+  title = {Accounting for Population Stratification in {{DNA}} Methylation Studies},
+  author = {Barfield, R. T. and Almli, L. M. and Kilaru, V. and Smith, A. K. and Mercer, K. B. and Duncan, R.},
+  year = {2014},
+  journal = {Genet Epidemiol},
+  volume = {38},
+  doi = {10.1002/gepi.21789}
+}
+
+@article{bibikovaHighDensityDNA2011a,
+  title = {High Density {{DNA}} Methylation Array with Single {{CpG}} Site Resolution},
+  author = {Bibikova, M. and Barnes, B. and Tsan, C. and Ho, V. and Klotzle, B. and Le, J. M.},
+  year = {2011},
+  journal = {Genomics},
+  volume = {98},
+  doi = {10.1016/J.YGENO.2011.07.007}
+}
+
+@article{binderEpigenomewideTranscriptomewideAnalyses2015a,
+  title = {Epigenome-Wide and Transcriptome-Wide Analyses Reveal Gestational Diabetes Is Associated with Alterations in the Human Leukocyte Antigen Complex},
+  author = {Binder, A. M. and LaRocca, J. and Lesseur, C. and Marsit, C. J. and Michels, K. B.},
+  year = {2015},
+  journal = {Clin Epigenet},
+  volume = {7},
+  doi = {10.1186/s13148-015-0116-y}
+}
+
+@article{bretonSmallmagnitudeEffectSizes2017,
+  title = {Small-Magnitude Effect Sizes in Epigenetic End Points Are Important in Children's Environmental Health Studies: The Children's Environmental Health and Disease Prevention Research Center's Epigenetics Working Group},
+  author = {Breton, C. V. and Marsit, C. J. and Faustman, E. and Nadeau, K. and Goodrich, J. M. and Dolinoy, D. C.},
+  year = {2017},
+  journal = {Environ Health Perspect},
+  volume = {125},
+  doi = {10.1289/EHP595}
+}
+
+@article{bryantRacialEthnicDisparities2010a,
+  title = {Racial/Ethnic Disparities in Obstetric Outcomes and Care: Prevalence and Determinants},
+  author = {Bryant, A. S. and Worjoloh, A. and Caughey, A. B. and Washington, A. E.},
+  year = {2010},
+  journal = {Am J Obstet Gynecol},
+  volume = {202},
+  doi = {10.1016/j.ajog.2009.10.864}
+}
+
+@article{brycGeneticAncestryAfrican2015a,
+  title = {The Genetic Ancestry of {{African Americans}}, {{Latinos}}, and {{European Americans}} across the {{United States}}},
+  author = {Bryc, K. and Durand, E. Y. and Macpherson, J. M. and Reich, D. and Mountain, J. L.},
+  year = {2015},
+  journal = {Am J Hum Genet},
+  volume = {96},
+  doi = {10.1016/j.ajhg.2014.11.010}
+}
+
 @article{burtonSyncytialKnotsSprouts2009,
   title = {Syncytial Knots, Sprouts, Apoptosis, and Trophoblast Deportation from the Human Placenta},
   author = {Burton, Graham J. and Jones, Carolyn J P},
@@ -49,6 +148,15 @@
   keywords = {2013 elsevier inc,all rights reserved,dna methylation,epithelial-to-mesenchymal transition,trophoblast invasion}
 }
 
+@article{chenDiscoveryCrossreactiveProbes2013a,
+  title = {Discovery of Cross-Reactive Probes and Polymorphic {{CpGs}} in the {{Illumina Infinium HumanMethylation450}} Microarray},
+  author = {Chen, Y. and Lemire, M. and Choufani, S. and Butcher, D. T. and Grafodatskaya, D. and Zanke, B. W.},
+  year = {2013},
+  journal = {Epigenetics.},
+  volume = {8},
+  doi = {10.4161/epi.23470}
+}
+
 @article{chenDNAMethylationAssociated2013,
   title = {{{DNA}} Methylation Is Associated with Transcription of {{Snail}} and {{Slug}} Genes},
   author = {Chen, Ying and Wang, Kai and Qian, Chao-Nan and Leach, Ricard},
@@ -75,6 +183,33 @@
   doi = {10.1093/nar/gkl048}
 }
 
+@article{chuInterethnicDNAMethylation2017a,
+  title = {Interethnic {{DNA}} Methylation Difference and Its Implications in Pharmacoepigenetics},
+  author = {Chu, S. -. K. and Yang, H. -. C.},
+  year = {2017},
+  journal = {Epigenomics.},
+  volume = {9},
+  doi = {10.2217/epi-2017-0046}
+}
+
+@article{cortesSupportvectorNetworks1995a,
+  title = {Support-Vector Networks},
+  author = {Cortes, C. and Vapnik, V.},
+  year = {1995},
+  journal = {Mach Learn},
+  volume = {20},
+  doi = {10.1007/BF00994018}
+}
+
+@article{daca-roszakImpactSNPsMethylation2015a,
+  title = {Impact of {{SNPs}} on Methylation Readouts by {{Illumina Infinium HumanMethylation450 BeadChip Array}}: Implications for Comparative Population Studies},
+  author = {{Daca-Roszak}, P. and Pfeifer, A. and {\.Z}ebracka-Gala, J. and Rusinek, D. and Szybi{\'n}ska, A. and Jarz{\k{a}}b, B.},
+  year = {2015},
+  journal = {BMC Genom},
+  volume = {16},
+  doi = {10.1186/s12864-015-2202-0}
+}
+
 @article{daviesCellAdhesionMigration2016,
   title = {Cell {{Adhesion}} \& {{Migration Epithelial}}-Mesenchymal Transition during Extravillous Trophoblast Differentiation {{Epithelial}}-Mesenchymal Transition during Extravillous Trophoblast Differentiation},
   author = {Davies, Jessica E and Pollheimer, J{\"u}rgen and J Yong, Hannah E and Kokkinos, Maria I and Kalionis, Bill and Kn{\"o}fler, Martin and Murthi, Padma and Pollheimer, urgen and Kn, Martin},
@@ -99,6 +234,15 @@
   doi = {10.1371/journal.pgen.1007785}
 }
 
+@article{delahayeGeneticVariantsInfluence2018a,
+  title = {Genetic Variants Influence on the Placenta Regulatory Landscape},
+  author = {Delahaye, F. and Do, C. and Kong, Y. and Ashkar, R. and Salas, M. and Tycko, B.},
+  year = {2018},
+  journal = {PLoS Genet},
+  volume = {14},
+  doi = {10.1371/journal.pgen.1007785}
+}
+
 @article{dokrasTumourSuppressorGene2002,
   title = {The Tumour Suppressor Gene Maspin Is Differentially Regulated in Cytotrophoblasts during Human Placental Development},
   author = {Dokras, A and Gardner, L M and Kirschmann, D A and Seftor, E A and Hendrix, M J},
@@ -108,6 +252,24 @@
   number = {0143-4004 LA - eng PT - Journal Article RN - 0 (Proteins) RN - 0 (RNA, Messenger) RN - 0 (Recombinant Proteins) RN - 0 (Serpins) RN - 0 (maspin) SB - IM},
   pages = {274--280},
   keywords = {analysis,cancer,Cell Line,Cells,Choriocarcinoma,Developmental,Down-Regulation,drug effects,Female,Gene Expression Regulation,Genes,genetics,growth \& development,Human,Humans,Immunohistochemistry,In Vitro,Maspin,Messenger,Metabolism,Non-U.S.Gov't,P.H.S.,pharmacology,Placenta,Pregnancy,Pregnancy Trimester,Proteins,Recombinant Proteins,Research Support,Rna,RNA,Serpins,Signal Transduction,Third,Trophoblasts,Tumor Suppressor,Tumour suppressor gene,U.S.Gov't,Western Blot}
+}
+
+@article{edgarEmpiricallyDrivenData2017b,
+  title = {An Empirically Driven Data Reduction Method on the Human {{450K}} Methylation Array to Remove Tissue Specific Non-Variable {{CpGs}}},
+  author = {Edgar, R. D. and Jones, M. J. and Robinson, W. P. and Kobor, M. S.},
+  year = {2017},
+  journal = {Clin Epigenet},
+  volume = {9},
+  doi = {10.1186/s13148-017-0320-z}
+}
+
+@article{edgarGeneExpressionOmnibus2002a,
+  title = {Gene {{Expression Omnibus}}: {{NCBI}} Gene Expression and Hybridization Array Data Repository},
+  author = {Edgar, R. and Domrachev, M. and Lash, A. E.},
+  year = {2002},
+  journal = {Nucleic Acids Res},
+  volume = {30},
+  doi = {10.1093/nar/30.1.207}
 }
 
 @article{ferrettiMolecularCircuitsShared2007,
@@ -136,6 +298,78 @@
   doi = {10.1016/j.placenta.2015.05.006}
 }
 
+@article{fondevilaRevisionSNPforID34plex2013a,
+  title = {Revision of the {{SNPforID}} 34-Plex Forensic Ancestry Test: Assay Enhancements, Standard Reference Sample Genotypes and Extended Population Studies},
+  author = {Fondevila, M. and Phillips, C. and Santos, C. and Freire Aradas, A. and Vallone, P. M. and Butler, J. M.},
+  year = {2013},
+  journal = {Forensic Sci Int Genet.},
+  volume = {7},
+  doi = {10.1016/j.fsigen.2012.06.007}
+}
+
+@article{fraserPopulationspecificityHumanDNA2012a,
+  title = {Population-Specificity of Human {{DNA}} Methylation},
+  author = {Fraser, H. B. and Lam, L. L. and Neumann, S. M. and Kobor, M. S.},
+  year = {2012},
+  journal = {Genome Biol},
+  volume = {13},
+  doi = {10.1186/gb-2012-13-2-r8}
+}
+
+@article{frichotFastEfficientEstimation2014a,
+  title = {Fast and Efficient Estimation of Individual Ancestry Coefficients},
+  author = {Frichot, E. and Mathieu, F. and Trouillon, T. and Bouchard, G. and Fran{\c c}ois, O.},
+  year = {2014},
+  journal = {Genetics},
+  volume = {196},
+  doi = {10.1534/genetics.113.160572}
+}
+
+@article{frichotLEAPackageLandscape2015a,
+  title = {{{LEA}}: An {{R}} Package for Landscape and Ecological Association Studies},
+  author = {Frichot, E. and Fran{\c c}ois, O.},
+  year = {2015},
+  journal = {Methods Ecol Evol},
+  volume = {6},
+  doi = {10.1111/2041-210X.12382}
+}
+
+@article{friedmanRegularizationPathsGeneralized2010a,
+  title = {Regularization Paths for Generalized Linear Models via Coordinate Descent},
+  author = {Friedman, J. and Hastie, T. and Tibshirani, R.},
+  year = {2010},
+  journal = {J Stat Softw},
+  volume = {33},
+  doi = {10.18637/jss.v033.i01}
+}
+
+@article{gibbsGlobalReferenceHuman2015b,
+  title = {A Global Reference for Human Genetic Variation},
+  author = {Gibbs, R. A. and Boerwinkle, E. and Doddapaneni, H. and Han, Y. and Korchina, V. and Kovar, C.},
+  year = {2015},
+  journal = {Nature},
+  volume = {526},
+  doi = {10.1038/nature15393}
+}
+
+@article{gobboNoEvidenceAssociation2018,
+  title = {No Evidence for Association of {{MTHFR 677C}}{$>$}{{T}} and {{1298A}}{$>$}{{C}} Variants with Placental {{DNA}} Methylation},
+  author = {Gobbo, G. F. and Price, E. M. and Hanna, C. W. and Robinson, W. P.},
+  year = {2018},
+  journal = {Clin Epigenet},
+  volume = {10},
+  doi = {10.1186/s13148-018-0468-1}
+}
+
+@article{greenEpigenomewideAssessmentDNA2016a,
+  title = {Epigenome-Wide Assessment of {{DNA}} Methylation in the Placenta and Arsenic Exposure in the {{New Hampshire Birth Cohort Study}} ({{USA}})},
+  author = {Green, B. B. and Karagas, M. R. and Punshon, T. and Jackson, B. P. and Robbins, D. J. and Houseman, E. A.},
+  year = {2016},
+  journal = {Environ Health Perspect},
+  volume = {124},
+  doi = {10.1289/ehp.1510437}
+}
+
 @article{grigoriuCellSpecificPatterns2011,
   title = {Cell Specific Patterns of Methylation in the Human Placenta},
   author = {Grigoriu, Ariadna and Ferreira, Jose Carlos and Choufani, Sanaa and Baczyk, Dora and Kingdom, John and Weksberg, Rosanna},
@@ -144,6 +378,23 @@
   issn = {1559-2308},
   doi = {10.4161/epi.6.3.14196},
   keywords = {Cell type-specific methylation,Cytotrophoblast purification,DNA methylation,Epigenetics,Placenta,Placental fibroblast purification}
+}
+
+@article{hannaPervasivePolymorphicImprinted2016a,
+  title = {Pervasive Polymorphic Imprinted Methylation in the Human Placenta},
+  author = {Hanna, C. W. and Pe{\~n}aherrera, M. S. and Saadeh, H. and Andrews, S. and McFadden, D. E. and Kelsey, G.},
+  year = {2016},
+  journal = {Genome Res},
+  volume = {26},
+  doi = {10.1101/gr.196139.115}
+}
+
+@article{HansenKDIlluminaHumanMethylation450,
+  title = {Hansen {{KD}}. {{IlluminaHumanMethylation450}}~Kanno.Ilmn12.Hg19: Annotation for {{Illumina}}'s 450~k Methylation Arrays. {{Bioconductor}}. 2016.}
+}
+
+@article{HastieTibshiraniNarasimhan,
+  title = {Hastie {{T}}, {{Tibshirani R}}, {{Narasimhan B}}, {{Chu G}}. Impute: Imputation for Microarray Data. {{Bioconductor}}. 2018. {{http://bioconductor.org/packages/release/bioc/html/impute.html.}}}
 }
 
 @article{hembergerEpigeneticLandscapeRequired2007,
@@ -158,6 +409,32 @@
   issn = {1420-9071},
   doi = {10.1007/s00018-007-7113-z},
   language = {en}
+}
+
+@article{horvathDNAMethylationAge2013a,
+  title = {{{DNA}} Methylation Age of Human Tissues and Cell Types},
+  author = {Horvath, S.},
+  year = {2013},
+  journal = {Genome Biol},
+  volume = {14},
+  doi = {10.1186/gb-2013-14-10-r115}
+}
+
+@article{huangApplicationsSupportVector2018a,
+  title = {Applications of Support Vector Machine ({{SVM}}) Learning in Cancer Genomics},
+  author = {Huang, S. and Cai, N. and Pacheco, P. P. and Narrandes, S. and Wang, Y. and Xu, W.},
+  year = {2018},
+  journal = {Cancer Genom Proteom},
+  volume = {15},
+  doi = {10.21873/cgp.20063}
+}
+
+@article{kaneshiroChallengesCollectingData2011a,
+  title = {The Challenges of Collecting Data on Race and Ethnicity in a Diverse, Multiethnic State},
+  author = {Kaneshiro, B. and Geling, O. and Gellert, K. and Millar, L.},
+  year = {2011},
+  journal = {Hawaii Med J},
+  volume = {70}
 }
 
 @article{kimMethylomeFetalMaternal2012,
@@ -176,6 +453,51 @@
   keywords = {decidua,dna,dna methylation,epigenetics,epigenome,hofbauer cell,methyltransferase,placenta,pregnancy}
 }
 
+@article{konwarDNAMethylationProfiling2018a,
+  title = {{{DNA}} Methylation Profiling of Acute Chorioamnionitis-Associated Placentas and Fetal Membranes: Insights into Epigenetic Variation in Spontaneous Preterm Births},
+  author = {Konwar, C. and Price, E. M. and Wang, L. Q. and Wilson, S. L. and Terry, J. and Robinson, W. P.},
+  year = {2018},
+  journal = {Epigenet Chromatin},
+  volume = {11},
+  doi = {10.1186/s13072-018-0234-9}
+}
+
+@article{kuhnBuildingPredictiveModels2008a,
+  title = {Building Predictive Models in {{R}} Using the Caret Package},
+  author = {Kuhn, M.},
+  year = {2008},
+  journal = {J Stat Softw},
+  volume = {28},
+  doi = {10.18637/jss.v028.i05}
+}
+
+@article{kwabi-addoIdentificationDifferentiallyMethylated2010a,
+  title = {Identification of Differentially Methylated Genes in Normal Prostate Tissues from {{African American}} and {{Caucasian}} Men},
+  author = {{Kwabi-Addo}, B. and Wang, S. and Chung, W. and Jelinek, J. and Patierno, S. R. and Wang, B. -. D.},
+  year = {2010},
+  journal = {Clin Cancer Res},
+  volume = {16},
+  doi = {10.1158/1078-0432.CCR-09-3342}
+}
+
+@article{leaveyEpigeneticRegulationPlacental2018a,
+  title = {Epigenetic Regulation of Placental Gene Expression in Transcriptional Subtypes of Preeclampsia},
+  author = {Leavey, K. and Wilson, S. L. and Bainbridge, S. A. and Robinson, W. P. and Cox, B. J.},
+  year = {2018},
+  journal = {Clin Epigenet},
+  volume = {10},
+  doi = {10.1186/s13148-018-0463-6}
+}
+
+@article{liuIdentificationGeneticEpigenetic2010a,
+  title = {Identification of Genetic and Epigenetic Marks Involved in Population Structure},
+  author = {Liu, J. and Hutchison, K. and {Perrone-Bizzozero}, N. and Morgan, M. and Sui, J. and Calhoun, V.},
+  year = {2010},
+  journal = {PLoS ONE},
+  volume = {5},
+  doi = {10.1371/journal.pone.0013209}
+}
+
 @article{maltepeHypoxiainducibleFactordependentHistone2005,
   title = {Hypoxia-Inducible Factor-Dependent Histone Deacetylase Activity Determines Stem Cell Fate in the Placenta},
   author = {Maltepe, Emin and Krampitz, Geoffrey W and Okazaki, Kelly M and {Red-Horse}, Kristy and Mak, Winifred and Simon, M. Celeste and Fisher, Susan J},
@@ -185,6 +507,33 @@
   number = {15},
   issn = {0950-1991},
   doi = {10.1242/dev.01923}
+}
+
+@article{martinEpigeneticsPreeclampsiaDefining2015a,
+  title = {Epigenetics and Preeclampsia: Defining Functional Epimutations in the Preeclamptic Placenta Related to the {{TGF}}-{$\beta$} Pathway},
+  author = {Martin, E. and Ray, P. D. and Smeester, L. and Grace, M. R. and Boggess, K. and Fry, R. C.},
+  year = {2015},
+  journal = {PLoS ONE},
+  volume = {10},
+  doi = {10.1371/journal.pone.0141294}
+}
+
+@article{mchughInterraterReliabilityKappa2012a,
+  title = {Interrater Reliability: The Kappa Statistic},
+  author = {McHugh, M. L.},
+  year = {2012},
+  journal = {Biochem Med},
+  volume = {22},
+  doi = {10.11613/BM.2012.031}
+}
+
+@article{mershaSelfreportedRaceEthnicity2015a,
+  title = {Self-Reported Race/Ethnicity in the Age of Genomic Research: Its Potential Impact on Understanding Health Disparities},
+  author = {Mersha, T. B. and Abebe, T.},
+  year = {2015},
+  journal = {Hum Genom},
+  volume = {9},
+  doi = {10.1186/s40246-014-0023-x}
 }
 
 @article{nelissenEpigeneticsPlacenta2011,
@@ -226,6 +575,131 @@
   doi = {10.1371/journal.pone.0068846}
 }
 
+@article{paquetteRegionsVariableDNA2016a,
+  title = {Regions of Variable {{DNA}} Methylation in Human Placenta Associated with Newborn Neurobehavior},
+  author = {Paquette, A. G. and Houseman, E. A. and Green, B. B. and Lesseur, C. and Armstrong, D. A. and Lester, B.},
+  year = {2016},
+  journal = {Epigenetics.},
+  volume = {11},
+  doi = {10.1080/15592294.2016.1195534}
+}
+
+@article{parkAssociationInternalSmoking2018a,
+  title = {Association of Internal Smoking Dose with Blood {{DNA}} Methylation in Three Racial/Ethnic Populations},
+  author = {Park, S. L. and Patel, Y. M. and Loo, L. W. M. and Mullen, D. J. and Offringa, I. A. and Maunakea, A.},
+  year = {2018},
+  journal = {Clin Epigenet},
+  volume = {10},
+  doi = {10.1186/s13148-018-0543-7}
+}
+
+@article{phillipsEurasiaplexForensicSNP2013b,
+  title = {Eurasiaplex: A Forensic {{SNP}} Assay for Differentiating {{European}} and {{South Asian}} Ancestries},
+  author = {Phillips, C. and Freire Aradas, A. and Kriegel, A. K. and Fondevila, M. and Bulbul, O. and Santos, C.},
+  year = {2013},
+  journal = {Forensic Sci Int Genet.},
+  volume = {7},
+  doi = {10.1016/j.fsigen.2013.02.010}
+}
+
+@article{phillipsInferringAncestralOrigin2007b,
+  title = {Inferring Ancestral Origin Using a Single Multiplex Assay of Ancestry-Informative Marker {{SNPs}}},
+  author = {Phillips, C. and Salas, A. and S{\'a}nchez, J. J. and Fondevila, M. and {G{\'o}mez-Tato}, A. and {\'A}lvarez-Dios, J.},
+  year = {2007},
+  journal = {Forensic Sci Int Genet.},
+  volume = {1},
+  doi = {10.1016/J.FSIGEN.2007.06.008}
+}
+
+@article{phipsonMissMethylPackageAnalyzing2015,
+  title = {{{missMethyl}}: An {{R}} Package for Analyzing Data from {{Illumina}}'s {{HumanMethylation450}} Platform},
+  author = {Phipson, B. and Maksimovic, J. and Oshlack, A.},
+  year = {2015},
+  journal = {Bioinformatics.},
+  volume = {32},
+  doi = {10.1093/bioinformatics/btv560}
+}
+
+@article{pidsleyDatadrivenApproachPreprocessing2013a,
+  title = {A Data-Driven Approach to Preprocessing {{Illumina 450K}} Methylation Array Data},
+  author = {Pidsley, R. and Wong, C. C. Y. and Volta, M. and Lunnon, K. and Mill, J. and Schalkwyk, L. C.},
+  year = {2013},
+  journal = {BMC Genom},
+  volume = {14},
+  doi = {10.1186/1471-2164-14-293}
+}
+
+@article{priceAdditionalAnnotationEnhances2013a,
+  title = {Additional Annotation Enhances Potential for Biologically-Relevant Analysis of the {{Illumina Infinium HumanMethylation450 BeadChip}} Array},
+  author = {Price, M. E. and Cotton, A. M. and Lam, L. L. and Farr{\'e}, P. and Emberly, E. and Brown, C. J.},
+  year = {2013},
+  journal = {Epigenet Chromatin.},
+  volume = {6},
+  doi = {10.1186/1756-8935-6-4}
+}
+
+@article{priceAdjustingBatchEffects2018a,
+  title = {Adjusting for Batch Effects in {{DNA}} Methylation Microarray Data, a Lesson Learned},
+  author = {Price, E. M. and Robinson, W. P.},
+  year = {2018},
+  journal = {Front Genet.},
+  volume = {9},
+  doi = {10.3389/fgene.2018.00083}
+}
+
+@article{priceNewApproachesPopulation2010a,
+  title = {New Approaches to Population Stratification in Genome-Wide Association Studies},
+  author = {Price, A. L. and Zaitlen, N. A. and Reich, D. and Patterson, N.},
+  year = {2010},
+  journal = {Nat Rev Genet},
+  volume = {11},
+  doi = {10.1038/nrg2813}
+}
+
+@article{pricePrincipalComponentsAnalysis2006a,
+  title = {Principal Components Analysis Corrects for Stratification in Genome-Wide Association Studies},
+  author = {Price, A. L. and Patterson, N. J. and Plenge, R. M. and Weinblatt, M. E. and Shadick, N. A. and Reich, D.},
+  year = {2006},
+  journal = {Nat Genet},
+  volume = {38},
+  doi = {10.1038/ng1847}
+}
+
+@article{pritchardInferencePopulationStructure2000a,
+  title = {Inference of Population Structure Using Multilocus Genotype Data},
+  author = {Pritchard, J. K. and Stephens, M. and Donnelly, P.},
+  year = {2000},
+  journal = {Genetics},
+  volume = {155}
+}
+
+@article{pritchardUseUnlinkedGenetic1999a,
+  title = {Use of Unlinked Genetic Markers to Detect Population Stratification in Association Studies},
+  author = {Pritchard, J. K. and Rosenberg, N. A.},
+  year = {1999},
+  journal = {Am J Hum Genet},
+  volume = {65},
+  doi = {10.1086/302449}
+}
+
+@article{qiUnmethylatedmaspinDNAMaternal2015a,
+  title = {Unmethylated-Maspin {{DNA}} in Maternal Plasma Is Associated with Severe Preeclampsia},
+  author = {Qi, Y. -. H. and Teng, F. and Zhou, Q. and Liu, Y. -. X. and Wu, J. -. F. and Yu, S. -. S.},
+  year = {2015},
+  journal = {Acta Obstet Gynecol Scand},
+  volume = {94},
+  doi = {10.1111/aogs.12691}
+}
+
+@article{rahmaniGenomewideMethylationData2017a,
+  title = {Genome-Wide Methylation Data Mirror Ancestry Information},
+  author = {Rahmani, E. and Shenhav, L. and Schweiger, R. and Yousefi, P. and Huen, K. and Eskenazi, B.},
+  year = {2017},
+  journal = {Epigenet Chromatin},
+  volume = {10},
+  doi = {10.1186/s13072-016-0108-y}
+}
+
 @article{robinsonEpigeneticModificationsHuman2019,
   title = {Epigenetic {{Modifications}} in the {{Human Placenta}}},
   author = {Robinson, Wendy P. and Pe{\~n}aherrera, Maria S. and Konwar, Chaini and Yuan, Victor and Wilson, Samantha L.},
@@ -236,6 +710,14 @@
   issn = {9780128135709},
   doi = {10.1016/B978-0-12-813570-9.00013-9},
   copyright = {All rights reserved}
+}
+
+@incollection{robinsonEpigeneticModificationsHuman2019b,
+  title = {Epigenetic {{Modifications}} in the {{Human Placenta}}},
+  booktitle = {Human {{Reproductive}} and {{Prenatal Genetics}}},
+  author = {Robinson, W. e. n. d. y. P. and Pe{\~n}aherrera, M. a. r. i. a. S. and h. a. i. n. i. Konwar, C. and i. c. t. o. r. Yuan, V. and Wilson, S. a. m. a. n. t. h. a. L.},
+  year = {2019},
+  doi = {10.1016/B978-0-12-813570-9.00013-9}
 }
 
 @article{robinsonHumanPlacentalMethylome2015,
@@ -250,6 +732,42 @@
   doi = {10.1101/cshperspect.a023044}
 }
 
+@article{robinsonHumanPlacentalMethylome2015a,
+  title = {The Human Placental Methylome},
+  author = {Robinson, W. P. and Price, E. M.},
+  year = {2015},
+  journal = {Cold Spring Harb Perspect Med.},
+  volume = {5},
+  doi = {10.1101/cshperspect.a023044}
+}
+
+@article{rongDNAMethylationProfiles2015a,
+  title = {{{DNA}} Methylation Profiles in Placenta and Its Association with Gestational Diabetes Mellitus},
+  author = {Rong, C. and Cui, X. and Chen, J. and Qian, Y. and Jia, R. and Hu, Y.},
+  year = {2015},
+  journal = {Exp Clin Endocrinol Diabetes},
+  volume = {123},
+  doi = {10.1055/s-0034-1398666}
+}
+
+@article{rosenbergMaternalObesityDiabetes2005a,
+  title = {Maternal Obesity and Diabetes as Risk Factors for Adverse Pregnancy Outcomes: Differences among 4 Racial/Ethnic Groups},
+  author = {Rosenberg, T. J. and Garbers, S. and Lipkind, H. and Chiasson, M. A.},
+  year = {2005},
+  journal = {Am J Public Health},
+  volume = {95},
+  doi = {10.2105/AJPH.2005.065680}
+}
+
+@article{roslinQualityControlAnalysis2016a,
+  title = {Quality Control Analysis of the 1000 {{Genomes Project Omni2}}.5 Genotypes},
+  author = {Roslin, N. M. and Li, W. and Paterson, A. D. and Strug, L. J.},
+  year = {2016},
+  journal = {BioRxiv.},
+  volume = {67},
+  doi = {10.1101/078600}
+}
+
 @article{ruebnerReducedSyncytin1Expression2013,
   title = {Reduced Syncytin-1 Expression Levels in Placental Syndromes Correlates with Epigenetic Hypermethylation of the {{ERVW}}-1 Promoter Region.},
   author = {Ruebner, Matthias and Strissel, Pamela L and Ekici, Arif B and Stiegler, Elisabeth and Dammer, Ulf and Goecke, Tamme W and Faschingbauer, Florian and Fahlbusch, Fabian B and Beckmann, Matthias W and Strick, Reiner},
@@ -259,6 +777,24 @@
   number = {2},
   pages = {e56145-e56145},
   doi = {10.1371/journal.pone.0056145}
+}
+
+@article{sankarRaceEthnicityGenetic2007a,
+  title = {Race and Ethnicity in Genetic Research},
+  author = {Sankar, P. and Cho, M. K. and Mountain, J.},
+  year = {2007},
+  journal = {Am J Med Genet A},
+  volume = {143A},
+  doi = {10.1002/ajmg.a.31575}
+}
+
+@article{smithNeighborhoodCharacteristicsInfluence2017a,
+  title = {Neighborhood Characteristics Influence {{DNA}} Methylation of Genes Involved in Stress Response and Inflammation: The Multi-Ethnic Study of Atherosclerosis},
+  author = {Smith, J. A. and Zhao, W. and Wang, X. and Ratliff, S. M. and Mukherjee, B. and Kardia, S. L. R.},
+  year = {2017},
+  journal = {Epigenetics.},
+  volume = {12},
+  doi = {10.1080/15592294.2017.1341026}
 }
 
 @article{soncinSignalingPathwaysMouse2015,
@@ -274,6 +810,51 @@
   keywords = {chorionic villi,cytotrophoblast,extravillous trophoblast,labyrinth,Placenta,syncytiotrophoblast,trophoblast giant cells,trophoblast stem cells}
 }
 
+@article{teschendorffBetamixtureQuantileNormalization2013a,
+  title = {A Beta-Mixture Quantile Normalization Method for Correcting Probe Design Bias in {{Illumina Infinium}} 450k {{DNA}} Methylation Data},
+  author = {Teschendorff, A. E. and Marabita, F. and Lechner, M. and Bartlett, T. and Tegner, J. and {Gomez-Cabrero}, D.},
+  year = {2013},
+  journal = {Bioinformatics},
+  volume = {29},
+  doi = {10.1093/bioinformatics/bts680}
+}
+
+@article{tianAccountingAncestryPopulation2008a,
+  title = {Accounting for Ancestry: Population Substructure and Genome-Wide Association Studies},
+  author = {Tian, C. and Gregersen, P. K. and Seldin, M. F.},
+  year = {2008},
+  journal = {Hum Mol Genet},
+  volume = {17},
+  doi = {10.1093/hmg/ddn268}
+}
+
+@article{tibshiraniClassPredictionNearest2003a,
+  title = {Class Prediction by Nearest Shrunken Centroids, with Applications to {{DNA}} Microarrays},
+  author = {Tibshirani, R. and Hastie, T. and Narasimhan, B. and Chu, G.},
+  year = {2003},
+  journal = {Stat Sci},
+  volume = {18},
+  doi = {10.1214/ss/1056397488}
+}
+
+@article{tibshiraniDiagnosisMultipleCancer2002a,
+  title = {Diagnosis of Multiple Cancer Types by Shrunken Centroids of Gene Expression},
+  author = {Tibshirani, R. and Hastie, T. and Narasimhan, B. and Chu, G.},
+  year = {2002},
+  journal = {Proc Natl Acad Sci USA},
+  volume = {99},
+  doi = {10.1073/pnas.082099299}
+}
+
+@article{tricheLowlevelProcessingIllumina2013a,
+  title = {Low-Level Processing of {{Illumina Infinium DNA Methylation BeadArrays}}},
+  author = {Triche, T. J. and Weisenberger, D. J. and Berg, D. and Laird, P. W. and Siegmund, K. D. and Siegmund, K. D.},
+  year = {2013},
+  journal = {Nucleic Acids Res},
+  volume = {41},
+  doi = {10.1093/nar/gkt090}
+}
+
 @article{tsaiTissueSpecificCTCF2014,
   title = {Tissue Specific {{CTCF}} Occupancy and Boundary Function at the Human Growth Hormone Locus},
   author = {Tsai, Yu-Cheng and Cooke, Nancy E. and Liebhaber, Stephen A.},
@@ -285,6 +866,46 @@
   pages = {4906--4921},
   issn = {0305-1048},
   doi = {10.1093/nar/gku139}
+}
+
+@article{UnitedStatesCensus,
+  title = {United {{States Census Bureau}}. {{Population}} and Housing. 2018. {{https://www.census.gov/en.html.}} {{Accessed}} 18 {{June}} 2018.}
+}
+
+@article{walserMutationalSpectrumNonCpG2010a,
+  title = {The Mutational Spectrum of Non-{{CpG DNA}} Varies with {{CpG}} Content},
+  author = {Walser, J. -. C. and Furano, A. V.},
+  year = {2010},
+  journal = {Genome Res},
+  volume = {20},
+  doi = {10.1101/gr.103283.109}
+}
+
+@article{wilsonMiningDNAMethylation2018a,
+  title = {Mining {{DNA}} Methylation Alterations towards a Classification of Placental Pathologies},
+  author = {Wilson, S. L. and Leavey, K. and Cox, B. J. and Robinson, W. P.},
+  year = {2018},
+  journal = {Hum Mol Genet},
+  volume = {27},
+  doi = {10.1093/hmg/ddx391}
+}
+
+@article{xiaoEthnicityRiskFactor2014a,
+  title = {Is Ethnicity a Risk Factor for Developing Preeclampsia? {{An}} Analysis of the Prevalence of Preeclampsia in {{China}}},
+  author = {Xiao, J. and Shen, F. and Xue, Q. and Chen, G. and Zeng, K. and Stone, P.},
+  year = {2014},
+  journal = {J Hum Hypertens},
+  volume = {28},
+  doi = {10.1038/jhh.2013.148}
+}
+
+@article{yeungDNAMethylationProfiles2016b,
+  title = {{{DNA}} Methylation Profiles in Preeclampsia and Healthy Control Placentas},
+  author = {Yeung, K. R. and Chiu, C. L. and Pidsley, R. and Makris, A. and Hennessy, A. and Lind, J. M.},
+  year = {2016},
+  journal = {Am J Physiol Heart Circ Physiol},
+  volume = {310},
+  doi = {10.1152/ajpheart.00958.2015}
 }
 
 @article{yuanAccurateEthnicityPrediction2019,
@@ -318,6 +939,22 @@
   keywords = {DNA methylation,EPIC array,Epigenetics,EWAS,Human,Immune cells,Microarray,Placenta,Pregnancy,Trophoblasts}
 }
 
+@article{yuanWvictor14EthnicityInference2019,
+  title = {Wvictor14/{{Ethnicity}}\_{{Inference}}\_450k: Analysis Scripts},
+  author = {Yuan, V. and Price, E. M. and Gobbo, G. and Mostafavi, S. and Cox, B. and Binder, A. M.},
+  year = {2019},
+  journal = {Zenodo},
+  doi = {10.5281/zenodo.2641272}
+}
+
+@article{yuanWvictor14PlaNETPlaNET2019,
+  title = {Wvictor14/{{PlaNET}}: {{PlaNET}}},
+  author = {Yuan, V. and Price, E. M. and Gobbo, G. and Mostafavi, S. and Cox, B. and Binder, A. M.},
+  year = {2019},
+  journal = {Zenodo},
+  doi = {10.5281/zenodo.2641266}
+}
+
 @article{yuenHypoxiaAltersEpigenetic2013,
   title = {Hypoxia Alters the Epigenetic Profile in Cultured Human Placental Trophoblasts.},
   author = {Yuen, Ryan K C and Chen, Baosheng and Blair, John D and Robinson, Wendy P and Nelson, D Michael},
@@ -329,6 +966,33 @@
   pages = {192--202},
   doi = {10.4161/epi.23400},
   keywords = {AP-1,DNA methylation,hypoxia,information dissemination,placenta,preeclampsia,scientific information}
+}
+
+@article{zhouComprehensiveCharacterizationAnnotation2017a,
+  title = {Comprehensive Characterization, Annotation and Innovative Use of Infinium {{DNA}} Methylation {{BeadChip}} Probes},
+  author = {Zhou, W. and Laird, P. W. and Shen, H.},
+  year = {2017},
+  journal = {Nucleic Acids Res.},
+  volume = {45},
+  doi = {10.1093/nar/gkw967}
+}
+
+@article{zhouSeSAMeReducingArtifactual2018a,
+  title = {{{SeSAMe}}: Reducing Artifactual Detection of {{DNA}} Methylation by {{Infinium BeadChips}} in Genomic Deletions},
+  author = {Zhou, W. and Triche, T. J. and Laird, P. W. and Shen, H.},
+  year = {2018},
+  journal = {Nucleic Acids Res},
+  volume = {46},
+  doi = {10.1093/nar/gky691}
+}
+
+@article{zouRegularizationVariableSelection2005a,
+  title = {Regularization and Variable Selection via the Elastic Net},
+  author = {Zou, H. and Hastie, T.},
+  year = {2005},
+  journal = {J R Stat Soc B},
+  volume = {67},
+  doi = {10.1111/j.1467-9868.2005.00503.x}
 }
 
 
