--- a/Sections/08_Introduction.Rmd
+++ b/Sections/08_Introduction.Rmd
@@ -4,13 +4,18 @@ output:
     toc : no
     keep_tex: no
     number_sections: yes
+bibliography: references.bib
 ---
 
 <!-- This section is mandatory! -->
 
 Parts of this chapter have been previously published and accepted for publication (see Preface for contribution details):
 
-Robinson WP, Peñaherrera MS, Konwar C, Yuan V, Wilson SL. Chapter 13 - Epigenetic Modifications in the Human Placenta. In: Leung PCK, Qiao J, editors. Human Reproductive and Prenatal Genetics. Academic Press; 2019. p. 293--311.
+Robinson WP, Peñaherrera MS, Konwar C, Yuan V, Wilson SL. Chapter 13 - Epigenetic Modifications in the Human Placenta.
+In: Leung PCK, Qiao J, editors.
+Human Reproductive and Prenatal Genetics.
+Academic Press; 2019.
+p. 293--311.
 
 Karin michels book chapter
 
@@ -18,25 +23,30 @@ Karin michels book chapter
 
 ## Epigenetics and placenta cell types
 
-  In the early blastocyst, the majority of gamete-derived epigenetic marks
-have been erased [@cantoneEpigeneticProgrammingReprogramming2013]. The
-trophectoderm will develop into one of the layers of the chorion as well as
-the villous trophoblast, which retains this low methylated state.
-Hypomethylation of chorionic villi as a whole reflects that trophoblast is
-the predominant cell type within this tissue [@grigoriuCellSpecificPatterns2011]. In the mouse, trophoblast
-hypomethylation is associated with down-regulation ofthe DNA methyltransferases, Dnmt3a, Dnmt3b, and Dnmt1a [@odaRegulationLineageSpecific2013]. However, the role of DNMTs in human trophoblast is less clear [@novakovicDNAMethylationmediatedDownregulation2010]. In contrast, the inner cell mass undergoes de novo global DNAm. These cells are the origin of the fetal tissues, but also contribute to primitive endoderm, from which placental endothelial cells are derived, and to the extraembryonic mesoderm, from which villus stroma is derived. In addition to differences in DNAm, the early trophectoderm shows higher H3K27 methylation as well as lower levels of histone H2A and/or H4 phosphorylation [@nelissenEpigeneticsPlacenta2011]. Further differentiation processes in both trophoblast and other lineages are associated with additional DNAm changes and histone modifications at specific regulatory loci [@hembergerEpigeneticLandscapeRequired2007].
+In the early blastocyst, the majority of gamete-derived epigenetic marks have been erased [].
+The trophectoderm will develop into one of the layers of the chorion as well as the villous trophoblast, which retains this low methylated state.
+Hypomethylation of chorionic villi as a whole reflects that trophoblast is the predominant cell type within this tissue [@grigoriu2011]. In the mouse, trophoblast hypomethylation is associated with down-regulation ofthe DNA methyltransferases, Dnmt3a, Dnmt3b, and Dnmt1a [@oda2013]. However, the role of DNMTs in human trophoblast is less clear [@novakovic2010]. In contrast, the inner cell mass undergoes de novo global DNAm. These cells are the origin of the fetal tissues, but also contribute to primitive endoderm, from which placental endothelial cells are derived, and to the extraembryonic mesoderm, from which villus stroma is derived. In addition to differences in DNAm, the early trophectoderm shows higher H3K27 methylation as well as lower levels of histone H2A and/or H4 phosphorylation [@nelissen2011]. Further differentiation processes in both trophoblast and other lineages are associated with additional DNAm changes and histone modifications at specific regulatory loci [@hemberger2007].
 
-The tree-like structures of chorionic villi that compose the placenta consist of an outer layer of stem-like cytotrophoblasts (CTBs), which fuse together to form syncytiotrophoblast (STB). This syncytium facilitates maternal-fetal exchange and produce hormones to support pregnancy, such as progesterone, leptin, human chorionic gonadotropin, and human placental lactogen. Transcriptional and epigenetic events control CTB differentiation and are triggered by pregnancy-associated levels in oxygen content [@soncinSignalingPathwaysMouse2015; @maltepeHypoxiainducibleFactordependentHistone2005]. Under low oxygen conditions, CTB fusion is impaired, and certain STB-specific CpG sites become hypermethylated [@yuenHypoxiaAltersEpigenetic2013]. For example, syncytin-1, which is critical for STB formation, is down-regulated in response to hypoxia through DNMT3A-dependent hypermethylation [@ruebnerReducedSyncytin1Expression2013]. Histone deacetylase complexes (HDAC) and histone acetyltransferases (HAT) are also involved through their effects on the transcription factor GCMa, which regulates syncytin-1 expression [@chuangHistoneDeacetylaseBinds2006].
+The tree-like structures of chorionic villi that compose the placenta consist of an outer layer of stem-like cytotrophoblasts (CTBs), which fuse together to form syncytiotrophoblast (STB).
+This syncytium facilitates maternal-fetal exchange and produce hormones to support pregnancy, such as progesterone, leptin, human chorionic gonadotropin, and human placental lactogen.
+Transcriptional and epigenetic events control CTB differentiation and are triggered by pregnancy-associated levels in oxygen content [@soncin2015]; @maltepe2005]. Under low oxygen conditions, CTB fusion is impaired, and certain STB-specific CpG sites become hypermethylated [@yuen2013]. For example, syncytin-1, which is critical for STB formation, is down-regulated in response to hypoxia through DNMT3A-dependent hypermethylation [@ruebner2013]. Histone deacetylase complexes (HDAC) and histone acetyltransferases (HAT) are also involved through their effects on the transcription factor GCMa, which regulates syncytin-1 expression [@chuang2006].
 
-The terminally differentiated syncytium contains nuclei derived from the fusion of CTBs at various stages in gestation. As a result, nuclei in the syncytium are heterogeneous in their age and structure. Nuclei from recently fused CTBs tend to contain a transcriptionally active euchromatic structure whereas older heterochromatic nuclei form condensed structures called syncytial knots [@burtonSyncytialKnotsSprouts2009]. The majority of STB nuclei are transcriptionally active and lacking repressive epigenetic marks, such as DNAm, H3K9me3, and H3K27me3 [@fogartyDifferentEpigeneticStates2015]. However, there is also an enrichment of H4K20me3, a repressive chromatin mark, that is suggested to potentially originate from the older nuclei.
+The terminally differentiated syncytium contains nuclei derived from the fusion of CTBs at various stages in gestation.
+As a result, nuclei in the syncytium are heterogeneous in their age and structure.
+Nuclei from recently fused CTBs tend to contain a transcriptionally active euchromatic structure whereas older heterochromatic nuclei form condensed structures called syncytial knots [@burton2009]. The majority of STB nuclei are transcriptionally active and lacking repressive epigenetic marks, such as DNAm, H3K9me3, and H3K27me3 [@fogarty2015].
+However, there is also an enrichment of H4K20me3, a repressive chromatin mark, that is suggested to potentially originate from the older nuclei.
 
-CTBs can also differentiate into extravillous trophoblasts (EVTs), which exhibit strikingly different transcriptional, epigenetic, and morphological characteristics compared to STBs. During this process, expression of cell adhesion molecules and polarity are lost and expression of mesenchymal markers, migratory, and invasive properties are gained [@daviesCellAdhesionMigration2016]. Similar to cancer cells, EVTs down-regulate E-cadherin by DNA methylation and up-regulate many proteases (e.g., *MMP9*), phosphatidylinositol 30-kinase (*PI3K*), and several autocrine or paracrine loops (e.g., involving *EGF* and *VEGF*) [@ferrettiMolecularCircuitsShared2007] as they transition into a highly invasive phenotype. Disruption of DNAm by *DNMT* inhibitor 5-aza-dC results in loss of invasive and migratory properties in EVT cells; up-regulation of epithelial markers, such as E-Cadherin, beta-Catenin, and Cadherin18; and down-regulation of mesenchymal genes, such as *VIM* and *CDH2* [@chen5azadCTreatmentInduces2013]. Transcription factors essential to the initiation of this transition process, *SNAIL* and *SLUG*, are also differentially methylated between CTBs and EVTs [@chenDNAMethylationAssociated2013].
+CTBs can also differentiate into extravillous trophoblasts (EVTs), which exhibit strikingly different transcriptional, epigenetic, and morphological characteristics compared to STBs.
+During this process, expression of cell adhesion molecules and polarity are lost and expression of mesenchymal markers, migratory, and invasive properties are gained [@davies2016]. Similar to cancer cells, EVTs down-regulate E-cadherin by DNA methylation and up-regulate many proteases (e.g., *MMP9*), phosphatidylinositol 30-kinase (*PI3K*), and several autocrine or paracrine loops (e.g., involving *EGF* and *VEGF*) [@ferretti2007] as they transition into a highly invasive phenotype. Disruption of DNAm by *DNMT* inhibitor 5-aza-dC results in loss of invasive and migratory properties in EVT cells; up-regulation of epithelial markers, such as E-Cadherin, beta-Catenin, and Cadherin18; and down-regulation of mesenchymal genes, such as *VIM* and *CDH2* [@chen2013]. Transcription factors essential to the initiation of this transition process, *SNAIL* and *SLUG*, are also differentially methylated between CTBs and EVTs [@chen2013a].
 
-Histone acetylation is also essential for trophoblast differentiation, and is thought to be controlled by placental-utero oxygen content through the activity of hypoxia-inducible factor 1 (HIF-1) and HDACs [@maltepeHypoxiainducibleFactordependentHistone2005]. The HDAC inhibitor, trichostatin-A, results in increased histone acetylation and over-expression of tumor suppressor gene *SERPINB5*, leading to reduced EVT motility and invasion [@dokrasTumourSuppressorGene2002]. In contrast, acetylation of histones H2A and H2B by the CREB-binding protein (CBP) acetyltransferases inhibits the epithelial-mesenchyme transition and promotes epithelial characteristics in mouse studies [@abellMAP3K4CBPregulatedH2B2011] . A higher-order chromatin structure mediated by histone modifications in combination with a locus repeat structure was demonstrated to play a role in STB-specific expression within the human growth hormone gene cluster [@tsaiTissueSpecificCTCF2014], illustrating that the DNA sequence itself can affect chromatin structure.
+Histone acetylation is also essential for trophoblast differentiation, and is thought to be controlled by placental-utero oxygen content through the activity of hypoxia-inducible factor 1 (HIF-1) and HDACs [@maltepe2005]. The HDAC inhibitor, trichostatin-A, results in increased histone acetylation and over-expression of tumor suppressor gene *SERPINB5*, leading to reduced EVT motility and invasion [@dokras2002]. In contrast, acetylation of histones H2A and H2B by the CREB-binding protein (CBP) acetyltransferases inhibits the epithelial-mesenchyme transition and promotes epithelial characteristics in mouse studies [@abell2011] . A higher-order chromatin structure mediated by histone modifications in combination with a locus repeat structure was demonstrated to play a role in STB-specific expression within the human growth hormone gene cluster [@tsai2014], illustrating that the DNA sequence itself can affect chromatin structure.
 
-Our knowledge of cell-specific epigenetics isconfined primarily to trophoblastic populations. However, additional placental cell populations are functionally important and may also be implicated in disease. Chorionic villus cultures yield the predominant growth of fibroblast cells, which havea DNAm profile that is much more similar to the fetal membranes than to whole placental villi [@robinsonHumanPlacentalMethylome2015]. Placental-specific macrophages, Hofbauer cells (HBs), lie in the mesenchymal core of the chorionic villi and in comparison to maternal and fetal macrophages, show hypermethylation of many immune response-related and classical macrophage-activation associated genes, possibly as a result of high expression of DNMT1, DNMT3A, and DNMT3B [@kimMethylomeFetalMaternal2012].
+Our knowledge of cell-specific epigenetics isconfined primarily to trophoblastic populations.
+However, additional placental cell populations are functionally important and may also be implicated in disease.
+Chorionic villus cultures yield the predominant growth of fibroblast cells, which havea DNAm profile that is much more similar to the fetal membranes than to whole placental villi [@robinson2015]. Placental-specific macrophages, Hofbauer cells (HBs), lie in the mesenchymal core of the chorionic villi and in comparison to maternal and fetal macrophages, show hypermethylation of many immune response-related and classical macrophage-activation associated genes, possibly as a result of high expression of DNMT1, DNMT3A, and DNMT3B [@kim2012].
 
-Our current understanding of pathological diseases that affect the placenta is contributed predominantly from bulk-tissue profiling studies, which suffer from the limitation that cellular heterogeneity can result in the dilution of cell-specific signals and the creation of spurious ones. More targeted studies investigating cell-specific signatures will contribute to our understanding of changes associated with normal placental functioning as well as of abnormal ones.
+Our current understanding of pathological diseases that affect the placenta is contributed predominantly from bulk-tissue profiling studies, which suffer from the limitation that cellular heterogeneity can result in the dilution of cell-specific signals and the creation of spurious ones.
+More targeted studies investigating cell-specific signatures will contribute to our understanding of changes associated with normal placental functioning as well as of abnormal ones.
 
 ### Major sources of variation of DNA methylation
 
@@ -44,7 +54,7 @@ Our current understanding of pathological diseases that affect the placenta is c
 
 ### Genetics and ethnicity
 
-testing cite brackets[@delahayeGeneticVariantsInfluence2018]
+testing cite brackets[@delahaye2018]
 
 ### Cell deconvolution
 
