consolidate references to one file

--- a/Sections/08_Introduction.Rmd
+++ b/Sections/08_Introduction.Rmd
@@ -4,7 +4,7 @@ output:
     toc : no
     keep_tex: no
     number_sections: yes
-bibliography: references.bib
+bibliography: ../References/references.bib
 ---
 
 <!-- This section is mandatory! -->
